--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,91 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html{
+  min-height: 100%;
+  position: relative;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background-image: linear-gradient(#695be6, #700B97);
+  height: 100%;
+}
+
+.card {
+  align-items: center;
+  border: 1px solid grey;
+  border-radius: 8px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  overflow: hidden;
+  background-color: #222;
+}
+
+
+.grid{
+  margin: 50px 150px;
+}
+
+.card-grid{
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  grid-auto-rows: minmax(240, auto);
+  gap: 20px;
+}
+
+.card img{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
+.title-gif {
+  color: #fff;
+}
+
+.busqueda {
+  margin-top: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+
+}
+
+.busqueda input{
+  width: 100%;
+  height: 30px;
+  padding: 0 20px;
+  font-size: 18px;
+  color: #000;
+  outline: none;
+  border: 1px solid silver;
+  border-radius: 30px;
+  margin: 0 150px 0;
+}
+
+
+.header{
+  display: flex;
+  width: 100%;
+  height: 80px;
+  background-color:#000000;
+  color: #fff;
+  align-items: center;
+  justify-content: center;
+  font-size: 25px;
+}
+
+
+.footer{
+  position: absolute;
+  bottom: 0;
+  display: flex;
+  width: 100%;
+  height: 60px;
+  background-image: linear-gradient(#600B99,#3E065F);
+  align-items: center;
+  justify-content: center;
+  color: #fff;
 }
